--- a/src/client/app.css
+++ b/src/client/app.css
@@ -4,5 +4,13 @@ h1 {
 
 body {
 	max-width: 1200px;
-	  margin: auto;
+	margin: 1rem auto !important;
+}
+
+.post {
+	border-radius: 5px;
+	-webkit-box-shadow: -1px 0px 3px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: -1px 0px 3px 0px rgba(0,0,0,0.75);
+	box-shadow: -1px 0px 3px 0px rgba(0,0,0,0.75);
+	padding: 1rem;
 }
