--- a/src/client/app.css
+++ b/src/client/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
 h1 {
   color: green;
 }
@@ -8,6 +10,10 @@ h1 {
 	-moz-box-shadow: -1px 0px 3px 0px rgba(0,0,0,0.75);
 	box-shadow: -1px 0px 3px 0px rgba(0,0,0,0.75);
 	padding: 1rem;
+}
+
+body {
+	font-family: 'Roboto', sans-serif;
 }
 
 .snake-board {
@@ -32,4 +38,43 @@ h1 {
 	width: 20px;
 	height: 20px;
 	background-color: darkred;
+}
+
+.score {
+	position: absolute;
+	z-index: 1;
+	right: 0;
+	margin: 3px;
+}
+
+.failed-screen {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	background-color: rgba(0,0,0,0.4);
+	display: flex;
+	justify-content: center;
+}
+
+.failed-screen-controls {
+	text-align: center;
+	position: absolute;
+	align-self: center;
+}
+
+.failed-screen-controls p {
+	/* font-weight: 700; */
+	font-size: 32px;
+}
+
+.failed-screen-controls .button {
+	font-size: 24px;
+	border: 0;
+ 	background: lightblue;
+	color: white;
+	padding: 10px 20px;
+	cursor: pointer;
+ 	box-shadow: none;
+ 	border-radius: 0px;
 }
